# monorail

./: .gitignore  Cargo.toml  Cross.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
bins/monorail-rower/: Cargo.toml
bins/monorail-rower/src/: command.rs  main.rs  source.rs
bins/monorail-sink/: Cargo.toml
bins/monorail-sink/src/: consumer.rs  main.rs
crates/monorail-api/: Cargo.toml
crates/monorail-api/src/: lib.rs
crates/monorail-coach/: Cargo.toml
crates/monorail-coach/src/: compliance.rs  lib.rs
crates/monorail-coach/tests/: plan_properties.rs
crates/monorail-core/: Cargo.toml
crates/monorail-core/src/: api.rs  ids.rs  lib.rs  metrics.rs  plan.rs  telemetry.rs  wire.rs
crates/monorail-core/tests/: wire_fixtures.rs
crates/monorail-core/tests/fixtures/: command_program_workout.json  command_reply_nack.json  envelope_monitor_sample.json  envelope_stroke_sample.json  workout_event_ended.json  workout_event_started.json  workout_plan.json
crates/monorail-logbook/: Cargo.toml
crates/monorail-logbook/src/: lib.rs
crates/monorail-logbook/tests/fixtures/: results_page.json
crates/monorail-pm5/: Cargo.toml
crates/monorail-pm5/src/: csafe.rs  lib.rs  transport.rs
crates/monorail-pm5/tests/: frame_properties.rs
crates/monorail-predict/: Cargo.toml
crates/monorail-predict/src/: critical_power.rs  lib.rs
crates/monorail-store/: Cargo.toml
crates/monorail-store/src/: lib.rs  migrations.rs
crates/monorail-stream/: Cargo.toml
crates/monorail-stream/src/: commands.rs  jetstream.rs  lib.rs  subjects.rs
docs/adr/: 0001-record-architecture-decisions.md  0002-cargo-workspace-monorepo.md  0003-pm5-via-usb-hid-csafe.md  0004-nats-jetstream-transport.md  0005-serialization-format.md  0006-duckdb-aggregation-store.md  0007-prediction-approach.md  0008-pi-cross-compilation-deployment.md  0009-workout-programs-and-coaching.md  0010-command-plane-pm5-programming.md  0011-web-frontend-leptos.md  0012-athlete-profile-weight-adjusted-calories.md  0013-concept2-logbook-import.md  README.md
web/monorail-ui/: Cargo.toml  index.html
web/monorail-ui/src/: api.rs  main.rs  pages.rs
