[package]
name = "monorail-sink"
description = "Aggregation host: JetStream consumer -> DuckDB, predictions, coach, API + UI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
monorail-core = { workspace = true }
monorail-stream = { workspace = true }
monorail-store = { workspace = true }
monorail-predict = { workspace = true }
monorail-coach = { workspace = true }
monorail-logbook = { workspace = true }
monorail-api = { workspace = true }
anyhow = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
