[package]
name = "monorail-api"
description = "Axum HTTP/SSE API surface, mounted by monorail-sink (ADR 0011)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
monorail-core = { workspace = true }
monorail-coach = { workspace = true }
monorail-predict = { workspace = true }
monorail-store = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
serde_json = { workspace = true }
http-body-util = "0.1"
