[package]
name = "monorail-logbook"
description = "Read-only Concept2 Logbook API client (ErgData-synced results, ADR 0013)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
