[package]
name = "monorail-store"
description = "DuckDB schema, migrations, ingestion, and aggregation queries"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
monorail-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# NOTE: the `duckdb` crate (bundled) lands with the first schema/ingest
# implementation — deferred so scaffold builds stay fast (ADR 0006).
