[package]
name = "monorail-stream"
description = "NATS subject schema and JetStream publish/consume helpers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
monorail-core = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
